Moving entities listing to registry, to allow more mod entities.